--- a/index.html
+++ b/index.html
@@ -10,11 +10,6 @@
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <!--FONTS-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap" rel="stylesheet">
     <!--STYLES-->
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/responsive.css">
@@ -95,7 +90,7 @@
             <div class="w-100">
                 <h1>Partagez votre route</h1>
                 <p class="text-center m-auto pb-3">Pour un monde plus éco-responsable!</p> 
-                <button role="button" type="button" class="btn btn__green cta">
+                <button role="button" type="button" class="btn btn__green cta btn-lg">
                     Démarrer
                 </button>   
             </div>
@@ -119,21 +114,21 @@
         <h2>Rejoignez-nous</h2>
         <p>Que ce soit pour vos trajets réguliers vers le travail, ou pour vos escapades de week-end et voyages, en tant que chauffeur ou en tant que passager, rejoignez-nous pour une démarche plus respectueuse de l'environnement, tout en profitant de moments partagés et de solutions de déplacement flexibles.</p>
         <p class="text-center">En plus? Vous gagnez 20 points de crédit à votre inscription!</p>
-        <button role="button" type="button" class="btn btn__orange cta text-black">
+        <button role="button" type="button" class="btn btn__orange cta btn-lg text-black">
             S'inscrire
         </button>
     </main>
 
     <footer>
         <img class="ecoride-logo ecoride-logo__footer" src="img/logo/logo-with-slogan.svg" alt="Logo de EcoRige" aria-hidden="true">
-        <div class="row text-center justify-content-around footer-links-div">
+        <small class="row text-center justify-content-around footer-links-div">
             <a href="#" role="link" class="col-sm-auto">Mentions légales</a>
             <a href="#" role="link" class="col-sm-auto">Politique de confidentialité</a>
             <a href="#" role="link" class="col-sm-auto">Conditions d'utilisation</a>
             <a href="#" role="link" class="col-sm-auto">Accueil</a>
             <a href="#" role="link" class="col-sm-auto">FAQ</a>
             <a href="#" role="link" class="col-sm-auto">Contact</a>
-        </div>
+        </small>
         <p class="text-center text-white" aria-label="Notre adresse email de contact">contact@ecoride.fr</p>
     </footer>
 </body>
