Added: Moderation page for staff members (demo), offline page, new js files for modo; Updated: html pages, stylesheets, form security (frontend);

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!--STYLES-->
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/pages.css">
     <link rel="stylesheet" href="style/responsive.css">
 </head>
 
@@ -121,16 +122,16 @@
 
     <footer>
         <img class="ecoride-logo ecoride-logo__footer" src="img/logo/logo-with-slogan.svg" alt="Logo de EcoRige" aria-hidden="true">
-        <small class="row text-center justify-content-around footer-links-div">
-            <a href="#" role="link" class="col-sm-auto">Mentions légales</a>
-            <a href="#" role="link" class="col-sm-auto">Politique de confidentialité</a>
-            <a href="#" role="link" class="col-sm-auto">Conditions d'utilisation</a>
-            <a href="#" role="link" class="col-sm-auto">Accueil</a>
-            <a href="#" role="link" class="col-sm-auto">FAQ</a>
-            <a href="#" role="link" class="col-sm-auto">Contact</a>
+        <small class="d-flex flex-column flex-sm-row flex-wrap justify-content-sm-around m-auto footer-links-div">
+            <a href="#" role="link">Mentions légales</a>
+            <a href="#" role="link">Politique de confidentialité</a>
+            <a href="#" role="link">Conditions d'utilisation</a>
+            <a href="#" role="link">Accueil</a>
+            <a href="#" role="link">FAQ</a>
+            <a href="#" role="link">Contact</a>
         </small>
         <p class="text-center text-white" aria-label="Notre adresse email de contact">contact@ecoride.fr</p>
-    </footer>
-</body>
+        </footer>
+    </body>
 
 </html>
