--- a/portal/demoAdminUser.html
+++ b/portal/demoAdminUser.html
@@ -4,36 +4,45 @@
     <title>Profil EcoRide</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <link rel="icon" type="image/svg" href="img/logo/icon.svg">
+    <link rel="icon" type="image/svg" href="../img/logo/favicon.svg">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <!--STYLES-->
     <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/pages.css">
     <link rel="stylesheet" href="../style/responsive.css">
+    <!--SCRIPTS-->
+    <script defer src="../script/script.js"></script>
+    <script defer src="../script/modo.js"></script>
 </head>
 
 <body>
-    <div class="sticky">
+    <div class="fixed">
+        <div class="credit-banner" style="background-color:#f3b271;justify-content:center;"><p style="text-align:center;font-size:0.87rem;">Plateforme en développement!</p></div>    
         <header>
-            <!--Burger menu icon-->
-            <svg class="header-icon" data-bs-toggle="offcanvas" href="#side-menu" aria-controls="side-menu" type="button" role="button" width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-label="Ouvrir le menu de navigation latéral">
-                <path class="header-icon__color" d="M3.5625 6C3.5625 5.58579 3.89829 5.25 4.3125 5.25H20.3125C20.7267 5.25 21.0625 5.58579 21.0625 6C21.0625 6.41421 20.7267 6.75 20.3125 6.75L4.3125 6.75C3.89829 6.75 3.5625 6.41422 3.5625 6Z" fill="#323544"/>
-                <path class="header-icon__color" d="M3.5625 18C3.5625 17.5858 3.89829 17.25 4.3125 17.25L20.3125 17.25C20.7267 17.25 21.0625 17.5858 21.0625 18C21.0625 18.4142 20.7267 18.75 20.3125 18.75L4.3125 18.75C3.89829 18.75 3.5625 18.4142 3.5625 18Z" fill="#323544"/>
-                <path class="header-icon__color" d="M4.3125 11.25C3.89829 11.25 3.5625 11.5858 3.5625 12C3.5625 12.4142 3.89829 12.75 4.3125 12.75L20.3125 12.75C20.7267 12.75 21.0625 12.4142 21.0625 12C21.0625 11.5858 20.7267 11.25 20.3125 11.25L4.3125 11.25Z" fill="#323544"/>
-            </svg>   
+            <div class="header-div-left">
+                <!--Burger menu icon-->
+                <img class="header-icon menu-icon" data-bs-toggle="offcanvas" href="#side-menu" aria-controls="side-menu" type="button" role="button" src="../img/icons/menu-icon-white.svg" alt="Icon 'menu'" aria-label="Ouvrir le menu de navigation latéral">
+                <img class="header-icon search-icon" src="../img/icons/search-icon-white.svg" alt="Icon 'loupe' de recherche">    
+            </div>
             <!--Logo-->
             <img class="ecoride-logo ecoride-logo__header" src="../img/logo/logo-without-slogan.svg" alt="Logo EcoRide" aria-hidden="true">
-            <!--User icon-->
-            <div class="dropdown">
-                <img class="header-icon profil-picture dropdown-toggle" src="../img/images/default-profil_stephanie-edwards-pixabay.png" alt="Icon avec photo de profil" type="button" role="button" id="triggerId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" aria-label="Ouvrir ou fermer la liste déroulante">
-                <div class="dropdown-menu" id="dropdown-menu-override" aria-labelledby="triggerId">
-                    <a class="dropdown-item d-flex align-items-center active" href="#" role="link">Profil</a>
-                    <a class="dropdown-item d-flex align-items-center" href="#"  role="link">Notifications</a>
-                    <a class="dropdown-item d-flex align-items-center" href="#" role="link">Mes covoiturages</a>
-                    <a class="dropdown-item d-flex align-items-center" href="#"  role="link">Mes voitures</a>
-                    <a class="dropdown-item d-flex align-items-center" href="#" role="link">Paramètres</a>
-                    <a class="dropdown-item d-flex align-items-center" href="#"  role="link">Déconnexion</a>
+            <div class="header-div-right">
+                <!--User icon-->
+                <img class="header-icon modo-icon askModoMode" src="../img/icons/admin-icon-white.svg" alt="Icon 'Basculer en mode modération'">
+                <img class="header-icon notif-icon" src="../img/icons/bell-icon-white.svg" alt="Icon 'cloche' des notifications">
+                <div class="dropdown">
+                    <img class="header-icon profil-picture profil-picture__header dropdown-toggle" src="../img/images/default-profil_stephanie-edwards-pixabay.png" alt="Icon avec photo de profil" type="button" role="button" id="triggerId" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" aria-label="Ouvrir ou fermer la liste déroulante">
+                    <div class="dropdown-menu" id="dropdown-menu-override" aria-labelledby="triggerId">
+                        <a class="dropdown-item d-flex align-items-center active" href="#" role="link">Profil</a>
+                        <a class="dropdown-item d-flex align-items-center" href="#"  role="link">Notifications</a>
+                        <a class="dropdown-item d-flex align-items-center" href="#" role="link">Mes covoiturages</a>
+                        <a class="dropdown-item d-flex align-items-center" href="#"  role="link">Mes voitures</a>
+                        <a class="dropdown-item d-flex align-items-center askModoMode" href="#"  role="link">Modération</a>
+                        <a class="dropdown-item d-flex align-items-center" href="#" role="link">Paramètres</a>
+                        <a class="dropdown-item d-flex align-items-center" href="#"  role="link">Déconnexion</a>
+                    </div>
                 </div>
             </div>
         </header>
@@ -75,6 +84,7 @@
         </div>
         <hr>
         <div class="bottom-items">
+            <a href="#" class="side-menu-item askModoMode" role="link">Modération</a>
             <a href="#" class="side-menu-item" role="link">Contact</a>
             <a href="#" class="side-menu-item" role="link">Paramètres</a>
             <a href="#" class="side-menu-item" role="link">Déconnexion</a>
@@ -85,30 +95,30 @@
         <section>
             <div class="d-flex flex-column justify-content-center">
                 <img class="d-block profil-picture profil-picture__profil m-auto" src="../img/images/default-profil_stephanie-edwards-pixabay.png" alt="Photo de profil">
-                <div class="d-flex flex-column profil-content">
+                <div class="d-flex flex-column profil-content mt-4">
                     <p class="bold">José De EcoRide</p>
                     <p>Passager & Chauffeur</p>
-                    <p class="star-rating d-flex flex-row justify-content-center">
-                        <img src="../img/icons/star-icon-filled.svg" alt="Étoile">
-                        <img src="../img/icons/star-icon-filled.svg" alt="Étoile">
-                        <img src="../img/icons/star-icon-filled.svg" alt="Étoile">
-                        <img src="../img/icons/star-icon-filled.svg" alt="Étoile">
+                    <p class="star-rating d-flex flex-row justify-content-center mb-3">
+                        <img src="../img/icons/star-icon-empty.svg" alt="Étoile">
+                        <img src="../img/icons/star-icon-empty.svg" alt="Étoile">
+                        <img src="../img/icons/star-icon-empty.svg" alt="Étoile">
+                        <img src="../img/icons/star-icon-empty.svg" alt="Étoile">
                         <img src="../img/icons/star-icon-empty.svg" alt="Étoile">
                     </p>
-                    <p class="user-description">Directeur technique et voyageur passionné d'écologie</p>
+                    <p class="user-description">Directeur technique et voyageur soucieux de l'écologie</p>
                 </div>
             </div>
-            <button class="btn btn__light btn-thin mt-3">Éditer mon profil</button>
+            <button class="btn btn__light btn-thin mt-4">Éditer mon profil</button>
         </section>
         <div id="innerProfilSection" class="d-flex flex-row">
-            <button class="col profilSection-active" type="button" role="button">Mes covoiturages</button>
-            <button class="col" type="button" role="button">Mes voitures</button>
+            <button id="mesCovoituragesButton" class="col profilSection-active" type="button" role="button">Mes covoiturages</button>
+            <button id="mesVoituresButton" class="col" type="button" role="button">Mes voitures</button>
         </div>
         <section id="mesCovoiturages">
-            <p>Vous n'avez aucun covoiturage pour l'instant</p>
+            <p>Vous n'avez aucun covoiturage pour l'instant...</p>
         </section>
-        <section id="mesVoitures" class="d-none">
-            <p>Vous n'avez aucune voiture pour l'instant</p>
+        <section id="mesVoitures">
+            <p>Vous n'avez aucune voiture pour l'instant...</p>
         </section>
     </main>
 
@@ -122,7 +132,7 @@
         <a href="#" role="link">FAQ</a>
         <a href="#" role="link">Contact</a>
     </small>
-    <p class="text-center text-white" aria-label="Notre adresse email de contact">contact@ecoride.fr</p>
+    <p class="text-center m-auto mt-3" aria-label="Notre adresse email de contact">contact@ecoride.fr</p>
     </footer>
 </body>
 
